--- a/Web_Scraping_Assignment_Task_DS01.ipynb
+++ b/Web_Scraping_Assignment_Task_DS01.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "1093c3ac",
    "metadata": {},
    "outputs": [],
@@ -51,15 +51,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "c8861d1a",
+   "execution_count": 3,
+   "id": "5b286797",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the name of a famous person: Robert Downey Junior\n",
+      "Enter the name of a famous person: Tom Cruise\n",
       "50 images downloaded successfully.\n"
      ]
     }
@@ -67,7 +67,7 @@
    "source": [
     "keyword = input('Enter the name of a famous person: ')\n",
     "num_images = 50\n",
-    "save_directory = r'C:\\Users\\HP\\Documents\\Data_Science_Course\\Curriculum\\Case Studies and Projects\\Web Scraping assignment(Newbieron)'\n",
+    "save_directory = r'C:\\Users\\HP\\Documents\\Data_Science_Course\\Curriculum\\Case_Studies_and_Projects\\Web_Scraping_assignment_Newbieron'\n",
     "\n",
     "download_images(keyword, num_images, save_directory)"
    ]
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44354ddc",
+   "id": "e725f8a9",
    "metadata": {},
    "outputs": [],
    "source": []
