Web_Scraping_Task_DS03.ipynb

--- a/Web_Scraping_Task_DS03.ipynb
+++ b/Web_Scraping_Task_DS03.ipynb
@@ -45,7 +45,7 @@
     "\n",
     "def main():\n",
     "    # Replace \"YOUR_API_KEY\" with your actual Google Maps API key\n",
-    "    api_key = \"AIzaSyB14lgggQ8_p-yt70PH0pkOBhO1D2pM-Mo\"\n",
+    "    api_key = \"#api_key\"\n",
     "    location = \"20.5937° N, 78.9629° E\" # latitude,longitude\n",
     "\n",
     "    # Replace \"YOUR_KEYWORD\" with the business type or name you want to search for\n",
