Web_Scraping_Assignment_Task_DS01.ipynb

--- a/Web_Scraping_Assignment_Task_DS01.ipynb
+++ b/Web_Scraping_Assignment_Task_DS01.ipynb
@@ -12,7 +12,7 @@
     "from google_images_search import GoogleImagesSearch\n",
     "\n",
     "# Configure the Google Images Search client\n",
-    "gis = GoogleImagesSearch('AIzaSyDSq9IQErlw5AMHAW0aiXPE5AFG1e720C0', 'd422c3587786e4b21') # (API_key, CSE_key)"
+    "gis = GoogleImagesSearch('API_key', 'CSE_key') # (API_key, CSE_key)"
    ]
   },
   {
